fixed more spacing issues, added sample text

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,14 +134,14 @@ a {
   	font-family: 'Baskerville MT Std';
 	font-size: 14px;
 	font-weight: bold;
-	padding-top: 10px;
+	padding-top: 0px;
 	letter-spacing: 1px;
 
 }
 
 .navContainer .navLinkBox {
 	padding-left: 40px;
-	padding-top: 15px;
+	padding-top: 5px;
 	font-size: 18px;
 	letter-spacing: 2px;
 }
@@ -170,7 +170,7 @@ section {
 	width: 1200px;
 	margin: 0;
 	overflow: auto;
-	padding-top: 30px;
+	padding-top: 20px;
 }
 
 .samplePortfolioContainer {
@@ -297,16 +297,25 @@ main {
 	margin: 0 auto;
 }
 	
-.portfolioBoxHead {
-	margin: 0;
-	padding:0;
+.portfolioBox .portfolioBoxHead {
+	font-family: 'News Gothic MT Std';
+	text-align: center;
+	font-weight: bold;
+	color: white;
+	font-size: 20px;
+	padding-top: 80px;
 }
 
-.portfolioBoxSubheading {
-	margin: 0;
-	padding: 0;
+.portfolioBox .portfolioBoxSubheading {
+	font-family: 'News Gothic MT Std';
+	text-align: center;
+	font-weight: bold;
+	color: white;
+	font-size: 14px;
+	padding-top: 40px;
 }
 
+	
 
 @media screen and (max-width: 1100px)
 {
